--- a/style.css
+++ b/style.css
@@ -8,16 +8,24 @@ html {
 body {
     font-family: 'M PLUS Rounded 1c', sans-serif;
     min-height: 100vh;
-    background:linear-gradient(#5638da,#3da8f0);
+    background:linear-gradient(#5638da 30%, #3da8f0 70%);
 }
 .title {
     text-align: center;
     color: mintcream;
+    margin-bottom: 20px;
+}
+.sub-title{
+    text-align: center;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    letter-spacing: 1rem;
+    border-bottom: 1px solid;
 }
 .wrapper {
     width: 100%;
-    margin: 30px auto;
-    padding: 0 4%;
+    margin: 0 auto;
+    padding: 50px 4%;
 }
 .errors {
     color: red;
@@ -32,113 +40,68 @@ body {
 -----------------------------------*/
 .form-area {
     background-color: #ebf0f1;
-    padding: 15px 30px;
-    width: 80%;
-    margin: 0 auto;
+    padding: 2% 5%;
+    margin-bottom: 10px;
     border-radius:10px;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="date"] {
     border: 1px solid #b8b4b4;
     border-radius: 3px;
     width: 100%;
-    padding: 10px;
+    padding: 5px;
+    margin-bottom: 10px;
 }
-input[type="date"]{
-    border: 1px solid #b8b4b4;
-    border-radius: 3px;
-    width: 100%;
-    padding: 10px;
-}
+
 
 /*ボタン*/
 .submit-btn{
     background-color: #f200ff;
-    width: 100%;
-    margin-top: 20px;
-    padding: 5px 0;
+    margin-top: 10px;
     letter-spacing: 1.5rem;
     text-indent: 1.5rem;
-    border-radius:10px;
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 .addition-btn{
     background-color: #0000ed;
-    display: block;
-    width: 100%;
-    margin-top: 20px;
-    padding: 5px 0;
     letter-spacing: 1.5rem;
     text-indent: 1.5rem;
-    border-radius:10px;
-    text-decoration: none;
-    font-size: 20px;
+    font-size: 1.2rem;
+    margin-top: 10px;
 }
 .btn {
+    display: block;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
     color: #fff;
     border-radius: 5px;
     text-align: center;
+    text-decoration: none;
 }
 .btn:hover {
     opacity: 0.5;
 }
-.done-btn,
-.edit-btn,
-.delete-btn
-{
-    font-size: 1.5rem;
-    font-weight:lighter;
-    width: 100%;
-    text-decoration: none;
-    margin-right: 3px;
-    margin-bottom: 5px;
-    padding: 10px 30px;
-    display: flex;
-    justify-content: center;
-}
 .done-btn {
     background-color: #0047e1;
 }
-.edit-btn, 
-.cancel-edit-btn {
+.edit-btn {
     background-color: #ef7800;
 }
-.delete-btn, 
-.cancel-delete-btn {
+.delete-btn {
     background-color: #f24343;
 }
 .cancel-btn{
     background-color: #00d400;
-    font-size: 1.5rem;
-    font-weight:lighter;
-    width: 100%;
-    text-decoration: none;
-    margin-right: 3px;
-    margin-bottom: 5px;
-    padding: 10px 1px;
-    display: flex;
-    justify-content: center;
 }
-.cancel-edit-btn, 
-.cancel-delete-btn {
-    font-size: 1.5rem;
-    font-weight:lighter;
-    width: 100%;
-    text-decoration: none;
-    margin-right: 3px;
-    margin-bottom: 5px;
-    padding: 10px 15px;
-    display: flex;
-    justify-content: center;
-}
+
 /*未達成*/
-.incomplete-area
-{
+.incomplete-area,
+.complete-area {
     background-color: #ebf0f1;
-    padding: 20px;
-    width: 80%;
-    margin: 10px auto;
-    margin-top: 15px;
+    padding: 2% 5%;
+    margin-bottom: 10px;
     border-radius:10px;
 }
 .sub-title {
@@ -147,27 +110,32 @@ input[type="date"]{
 }
 .plan-list {
     width: 100%;
-    margin: 0 auto;
+}
+.plan-list tr {
+    height: 40px;
+}
+.plan-list td {
+    word-break: break-all;
 }
 .plan-title {
     text-align: left;
 }
-.plan-due-date {
-    text-align: left;
-}
+.plan-due-date,
 .plan-completion-date {
     text-align: left;
+    width: 150px;
+}
+.done-link-area,
+.edit-link-area,
+.delete-link-area {
+    width: 80px;
 }
 .expired {
     color: red;
-    text-align: left;
 }
-/*完了*/
-.complete-area {
-    background-color: #ebf0f1;
-    padding: 20px;
-    width: 80%;
-    margin: 10px auto;
-    margin-top: 15px;
-    border-radius: 10px;
+@media (max-width: 600px) {
+    .wrapper{
+        width: 100%;
+        margin: 0 auto;
+    }
 }
